deployments/python-app/test-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: python-app
    app.kubernetes.io/name: python-app
  name: python-app
  namespace: testing
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: python-app
      app.kubernetes.io/name: python-app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: python-app
        app.kubernetes.io/name: python-app
    spec:
      containers:
        - name: python-app
          image: marioschwabefilho/python-app:v1
          ports:
          - containerPort: 5000
            name: http
            protocol: TCP
