deployments/python-app/app-deployment.yml
#kubectl apply -f app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  namespace: testing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: flask-app-deployment-site
        image: marioschwabefilho/python-app:v1
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: testing
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30031
